--- a/generator-nr-maven-build/package.json
+++ b/generator-nr-maven-build/package.json
@@ -11,23 +11,23 @@
     "yeoman-generator"
   ],
   "devDependencies": {
-    "yeoman-test": "^1.7.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-xo": "^0.43.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.7",
+    "jest": "^29.7.0",
+    "lint-staged": "^15.2.1",
+    "prettier": "^3.2.4",
     "yeoman-assert": "^3.1.1",
-    "eslint": "^6.6.0",
-    "prettier": "^1.19.1",
-    "husky": "^3.0.9",
-    "lint-staged": "^9.4.3",
-    "eslint-config-prettier": "^6.6.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-config-xo": "^0.27.2",
-    "jest": "^26.1.0"
+    "yeoman-test": "^1.7.0"
   },
   "engines": {
     "npm": ">= 4.0.0"
   },
   "dependencies": {
-    "yeoman-generator": "^3.1.1",
     "chalk": "^2.1.0",
+    "yeoman-generator": "^3.1.1",
     "yosay": "^2.0.2"
   },
   "jest": {
