--- a/generator-nr-maven-build/package.json
+++ b/generator-nr-maven-build/package.json
@@ -20,15 +20,14 @@
     "lint-staged": "^15.2.1",
     "prettier": "^3.2.4",
     "yeoman-assert": "^3.1.1",
-    "yeoman-test": "^1.7.0"
+    "yeoman-test": "^8.2.0"
   },
   "engines": {
     "npm": ">= 4.0.0"
   },
   "dependencies": {
-    "chalk": "^2.1.0",
-    "yeoman-generator": "^3.1.1",
-    "yosay": "^2.0.2"
+    "yeoman-generator": "^7.1.1",
+    "yosay": "^3.0.0"
   },
   "jest": {
     "testEnvironment": "node"
@@ -68,6 +67,7 @@
     "pretest": "eslint .",
     "test": "jest"
   },
+  "type": "module",
   "repository": "git@github.com:bcgov-nr/edqa-war.git",
   "license": "Apache-2.0"
 }
