--- a/generators/gh-maven-build/templates/release.yaml
+++ b/generators/gh-maven-build/templates/release.yaml
@@ -1,10 +1,7 @@
 name: Release
 
 on:
-  push:
-    tags:
-      - 'v*'
-
+  workflow_dispatch:
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
