--- a/generators/gh-maven-build/templates/build-release.yaml
+++ b/generators/gh-maven-build/templates/build-release.yaml
@@ -30,6 +30,7 @@ jobs:
     name: Build and release
     runs-on: ubuntu-latest
 <% if (unitTestsPath) { -%>
+    if: ${{ ! startsWith(github.ref, 'refs/tags/v') }}
     needs: test
 <% } -%>
     permissions:
@@ -52,18 +53,13 @@ jobs:
           java-version: '8'
           distribution: 'temurin'
           cache: maven
-<% if (!gitHubPackages) { -%>
-          server-id: artifactory
-          server-username: ARTIFACTORY_USERNAME
-          server-password: ARTIFACTORY_PASSWORD    
-<% } -%>
       - name: Set branch
         id: set-branch        
         if: ${{ ! startsWith(github.ref, 'refs/tags/v') }}
         run: |
           if [[ ${{ startsWith(github.ref, 'refs/heads/') }} = true ]]; then
             echo "branch=${{ github.ref_name }}" >> "$GITHUB_OUTPUT"
-          fi          
+          fi
           if [[ ${{ startsWith(github.ref, 'refs/pull/') }} = true ]]; then
             echo "branch=${{ github.head_ref }}" >> "$GITHUB_OUTPUT"
           fi
@@ -73,7 +69,7 @@ jobs:
         shell: bash
         run: |
           TAG=${{ github.ref_name }}
-          VERSION=${TAG#v} 
+          VERSION=${TAG#v}
           echo "VERSION=${VERSION}" >> $GITHUB_ENV
           mvn versions:set -DnewVersion=${VERSION} --file <%= pomRoot %>pom.xml
       - name: Set build output parameters
@@ -86,6 +82,7 @@ jobs:
       - name: Build intention
         run: sh ./.github/workflows/build-intention.sh
         env:
+          EVENT_REASON: Build ${{ github.ref_name }}
           GITHUB_REPOSITORY: ${{ github.repository}}
           GITHUB_RUN_ID: ${{ github.run_id}}
           SERVICE_PROJECT: ${{ env.SERVICE_PROJECT }}
@@ -99,14 +96,6 @@ jobs:
           broker_jwt: ${{ secrets.BROKER_JWT }}
           intention_path: intention.json
           quickstart: true
-      - name: Start configure action
-        uses: bcgov-nr/action-broker-action-start@v1
-        with:
-          action_token: ${{ env.ACTION_TOKEN_CONFIGURE }}      
-      - name: Vault login
-        uses: bcgov-nr/action-broker-vault-login@v1
-        with:
-          action_token: ${{ env.ACTION_TOKEN_LOGIN }}
       - name: Set intention ID for deployment job
         id: set-intention-id
         run: |
